# inc-cg-reporter

./: .gitignore  CLAUDE.md  LICENSE  README.md  mypy.ini  package-lock.json  package.json  pyproject.toml  serverless.yml  tox.ini
.github/workflows/: main.yml  scheduled.yml
inc_cg_reporter/: app.py  connect_group.py  excel_writer.py  field_definition.py  writer.py
tests/: conftest.py  test_reporter.py
tests/fixtures/: field_data_cg.json  field_data_personal.json  person.json
