[tool.poetry]
name = "inc-cg-reporter"
version = "0.1.0"
description = ""
authors = ["Edwin Steele <edwin@wordspeak.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
daiquiri = "^2.1.1"
pypco = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
black = "^20.8b1"
mypy = "^0.782"
tox = "^3.20.0"
awscli-local = "^0.8"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
