[tool.poetry]
name = "inc-cg-reporter"
version = "0.1.0"
description = ""
authors = ["Edwin Steele <edwin@wordspeak.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.24.0"
daiquiri = "^2.1.1"
pypco = "^1.1.0"
openpyxl = "^3.0.5"
more_itertools = "^8.6.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.1"
black = "^24.0"
mypy = "^1.0"
tox = "^3.20.0"
pylint = "^3.0"
pretend = "^1.0.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
